--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -18,6 +18,6 @@ jobs:
         run: mvn -B package --file pom.xml 
       - name: setup the sonarqube 
         uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
-        with:
-          sonar-token: ${{ secrets.SONAR_QUBE_TOKEN }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
       
