--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -20,4 +20,10 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
+      - name: Run SonarQube Scanner
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=java \
+            -Dsonar.host.url=http://54.243.1.50:9000 \
+            -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN}}
       
