--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -21,11 +21,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
           SONAR_HOST_URL: http://54.243.1.50:9000
-          JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
       - name: Run SonarQube Scanner
-        run: |
-          sonar-scanner \
-            -Dsonar.projectKey=java \
-            -Dsonar.host.url=http://54.243.1.50:9000 \
-            -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN}}
+        run: sonar-scanner
       
