--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -21,6 +21,14 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
           SONAR_HOST_URL: https://54.243.1.50:9000
-      - name: Run SonarQube Scanner
-        run: sonar-scanner
+      - name: SonarQube Scan
+        run: |
+         sonar-scanner -X \
+          -Dsonar.projectKey=java \
+          -Dsonar.sources=src \
+          -Dsonar.host.url=https://54.243.1.50:9000 \
+          -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN  }}
+
+
+
       
