--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -1,4 +1,4 @@
-name: peforming java project checkout 
+name: Perform Java Project Checkout
 
 on: [push]
 
@@ -6,28 +6,24 @@ jobs:
   java-project:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repository 
+      - name: Checkout repository
         uses: actions/checkout@v3
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml 
-      - name: setup the sonarqube 
-        uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
-          SONAR_HOST_URL: https://54.243.1.50:9000
-        run: |
-         sonar-scanner -X \
-          -Dsonar.projectKey=java \
-          -Dsonar.sources=src \
-          -Dsonar.host.url=https://54.243.1.50:9000 \
-          -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN}}
 
-
-
-      
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v1
+        with:
+          projectKey: 'java'
+          sonarToken: ${{ secrets.SONAR_QUBE_TOKEN }}
+          sonarHostUrl: https://54.243.1.50:9000
+          extraProperties: |
+            sonar.sources=src
