--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -14,14 +14,11 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          # cache: maven
+          cache: maven
 
-      - name: Analyze with SonarCloud
-        uses: SonarSource/sonarcloud-github-action@4006f663ecaf1f8093e8e4abb9227f6041f52216
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}   
-        with:
-          
-          args:
-            -Dsonar.projectKey=java1
-            -Dsonar.organization=mohansourcecode
+      - name: Build and Analyze with Maven
+        run: mvn clean verify sonar:sonar \
+              -Dsonar.projectKey=java1 \
+              -Dsonar.organization=mohansourcecode \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN }}
