--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -16,9 +16,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build and Analyze with Maven
-        run: mvn clean verify sonar:sonar \
-              -Dsonar.projectKey=java1 \
-              -Dsonar.organization=mohansourcecode \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN }}
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@v2.1.0 # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
