--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -5,7 +5,11 @@ on: [push]
 jobs:
   java-project:
     runs-on: ubuntu-latest
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     steps:
+     
       - name: Checkout repository
         uses: actions/checkout@v3
       
