--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -6,7 +6,7 @@ jobs:
   java-project:
     runs-on: ubuntu-latest
     env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
 
     steps:
      
@@ -26,4 +26,4 @@ jobs:
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@v2.1.0
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
