--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -21,7 +21,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean verify sonar:sonar -Dsonar.login=${{ secrets.SONAR_QUBE_TOKEN }}
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@v2.1.0
