--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -27,3 +27,8 @@ jobs:
         uses: sonarsource/sonarcloud-github-action@v2.1.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_QUBE_TOKEN }}
+      - name: docker login1
+        uses: docker/login-action@v3
+        with:
+          username: ${{secrets.docker_username}}
+          password: ${{secrets.docker_password}} 
