--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -24,3 +24,9 @@ jobs:
         with:
           username: ${{secrets.docker_username}}
           password: ${{secrets.docker_password}} 
+      - name: bulding and pushing the docker image to the dockerr GitHub
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{secrets.docker_username}}/mohanjava:1.0
