--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -19,6 +19,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+      - name: Run Trivy vulnerability scanner in fs mode
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          trivy-config: trivy.yaml
       - name: docker login1
         uses: docker/login-action@v3
         with:
