--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -25,7 +25,7 @@ jobs:
           scan-type: 'fs'
           scan-ref: '.'
           trivy-config: trivy.yaml
-          
+
       - name: docker login1
         uses: docker/login-action@v3
         with:
@@ -37,5 +37,9 @@ jobs:
           context: .
           push: true
           tags: ${{secrets.docker_username}}/mohanjava:1.0
-      - name: perform the trivy scan 
-        run: trivy image ${{secrets.docker_username}}/mohanjava:1.0
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: 'docker.io/my-organization/${{secrets.docker_username}}/mohanjava:1.0'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
