--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -41,5 +41,8 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: 'docker.io/mohan14242/${{secrets.docker_username}}/mohanjava:1.0'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
