--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'docker.io/mohan14242/${{secrets.docker_username}}/mohanjava:1.0'
+          image-ref: 'docker.io/${{secrets.docker_username}}/mohanjava:1.0'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
