--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -31,14 +31,16 @@ jobs:
         with:
           username: ${{secrets.docker_username}}
           password: ${{secrets.docker_password}} 
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: 'docker.io/${{secrets.docker_username}}/mohanjava:1.0'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
       - name: bulding and pushing the docker image to the dockerr GitHub
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{secrets.docker_username}}/mohanjava:1.0
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          image-ref: 'docker.io/${{secrets.docker_username}}/mohanjava:1.0'
-          
+  
