--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -37,6 +37,10 @@ jobs:
           image-ref: 'docker.io/${{secrets.docker_username}}/mohanjava:1.0'
           format: 'sarif'
           output: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
       - name: bulding and pushing the docker image to the dockerr GitHub
         uses: docker/build-push-action@v5
         with:
