--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -36,11 +36,13 @@ jobs:
         with:
           image-ref: 'docker.io/${{secrets.docker_username}}/mohanjava:1.0'
           format: 'sarif'
+          template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+
       - name: bulding and pushing the docker image to the dockerr GitHub
         uses: docker/build-push-action@v5
         with:
