--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -45,7 +45,7 @@ jobs:
           sarif_file: 'trivy-results.sarif'
           category: my-analysis-tool
 
-      - name: bulding and pushing the docker image to the dockerr GitHub1
+      - name: bulding and pushing the docker image to the dockerr GitHub
         uses: docker/build-push-action@v5
         with:
           context: .
