--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: flase
+          push: false
           tags: ${{secrets.docker_username}}/mohanjava:1.0
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
